--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ Feng installation instructions
 In order to build feng you need:
 
 - a full Posix compatible system (suggested any linux distribution)
-- gnu toolchain (gcc >= 3.4 , make >= 3.80, libtool >= 1.5.20) [1]
+- gnu toolchain (gcc >= 3.4 , make >= 3.80) [1]
 - glib-2 >= 2.10 [2]
 - ffmpeg >= 0.5 [3]
 - libev >= 3.48 [4]
@@ -21,8 +21,6 @@ sources.
 
 - install the dependencies
 - enter the feng unpacked directory
-+ You may have to run libtoolize --copy --force if your libtool version is
-  different from the one used to create the package.
 - type ./configure in order to prepare the makefiles, you may specify a non
   standard prefix and the other paths, please refer to ./configure --help for
   the full details
@@ -63,7 +61,6 @@ The standard build instruction applies form this step.
     http://cgit.lscube.org                      -- LScube git repository
 
 [1] http://www.gnu.org/software/gcc/            -- GNU Compiler collection
-    http://www.gnu.org/software/libtool/        -- GNU Libtool
     http://www.gnu.org/software/make/           -- GNU Make
 
 [2] http://www.gtk.org                          -- Gimp Toolkit
