--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ In order to build feng you need:
 - a full Posix compatible system (suggested any linux distribution)
 - gnu toolchain (gcc >= 3.4 , make >= 3.80) [1]
 - glib-2 >= 2.10 [2]
-- ffmpeg >= 0.5 [3]
+- libav >= 0.7 [3]
 - libev >= 3.48 [4]
 
 Optionally we additionally use:
@@ -65,7 +65,7 @@ The standard build instruction applies form this step.
 
 [2] http://www.gtk.org                          -- Gimp Toolkit
 
-[3] http://ffmpeg.org                           -- FFmpeg
+[3] http://libav.org                            -- Libav
 
 [4] http://software.schmorp.de/pkg/libev.html   -- Libev
 
